Intermediate commit