@@ -10,6 +10,7 @@
 	<modules>
 		<module>core-functional</module>
 		<module>web-server</module>
+		<module>event-bus</module>
 	</modules>
 	<packaging>pom</packaging>
 
@@ -55,6 +56,12 @@
 			<dependency>
 				<groupId>org.reactive-toolbox</groupId>
 				<artifactId>web-server</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.reactive-toolbox</groupId>
+				<artifactId>event-bus</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 		</dependencies>
@@ -116,6 +123,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
+				<configuration>
+					<argLine>--add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.async=ALL-UNNAMED --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.functional=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -133,28 +143,12 @@
 				<version>3.8.0</version>
 				<configuration>
 					<release>12</release>
-					<verbose>true</verbose>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.22.0</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
